--- a/acronyms.tex
+++ b/acronyms.tex
@@ -57,3 +57,4 @@
 \newacronym{JLF}{JLF}{Jupiter Laser Facility}
 \newacronym{PPC}{PPC}{particles per cell}
 \newacronym{EPPS}{EPPS}{Electron Positron Proton Spectrometer}
+\newacronym{CPA}{CPA}{Chirped Pulse Amplification}
