--- a/chap1.tex
+++ b/chap1.tex
@@ -3,11 +3,32 @@ This chapter introduces lasers, applications of laser-accelerated protons, and g
 
 \section{Lasers}
 
-The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's idea that photons (particles of light) could ``stimulate'' atoms to produce identical photons if the properties of the incident photon are just right CITE. These identical photons form a coherent light source which possess the same ``quantum-mechanical phase'' and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic waves called with a device called the maser (because it produced microwave wavelength light). Nowadays, these devices are more generally called lasers because they produce light in other wavelengths (like visible and infrared).
+The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's idea that photons (particles of light) could ``stimulate'' atoms to produce identical photons if the properties of the incident photon are just right CITE. These identical photons form a coherent light source which possess the same quantum-mechanical phase and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic radiation\footnote{Electromagnetic radiation is just another word for light and is made up of oscillating electric and magnetic fields. The distance between adjacent wave crests in the fields is called the wavelength. Visible light has a wavelength between 400 and 700 nanometers and other forms of light (invisible to the naked eye) are similarly classified according to their wavelengths: radio, microwave, infra-red, ultra-violet, x-ray, gamma.} with a device called the maser (because it produced \emph{microwave} wavelength light). Now, these devices are more called lasers because they produce \emph{light} in other wavelengths (like visible and infrared).
 
-in a Ti:Sapph laser, 532nm light is obtained from a frequency doubled Nd:YAG laser. 532nm light is enough to excite Ti3+ ions, but this is an unstable state that decays to lower states with wavelength transitions between 650nm and 1100nm. The stimulated emission happens between the 650nm and 1100nm wavelengths and achieves a broadband spectrum which is essential for the short pulse lengths. 
 
-Nd:YAG lasers work by pumping (flash lamp or diode laser) to make gain media to in excited state. After population inversion is reached, released photons. Stimulated emission moves atom into unexcited state which stimulates release of photon. metastable state of Nd:YAG laser is 4F 3/2 state which goes down to 4F 1/2 with a transition of 1064 nm which is frequency doubled (second order HHG) to get the 532 nm for Ti:Sapph. the pump source of the Nd:Yag laser can be a flash lamp, but modern setups use diode lasers that emi at a specific wavelength of around 808nm which is efficiently absorbed by Nd3+ ions. 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.75\linewidth]{planning/images/laser_gain.pdf}
+	\caption{The components of a laser are depicted which include the pump source, active laser medium, and optical cavity. Image source: \cite{MeetOpticsPost}.}
+	\label{fig:laser_gain}
+\end{figure}
+
+A typical laser operates by adding energy to some material by a strong flash of light called the pump source. This material is called the active lasing medium. The atoms in the medium absorb light which excites electrons to higher energy states. Over time, these electrons relax back into lower energy states, emitting photons that collide with excited atoms to stimulate emission of more photons. The medium is situated in an optical cavity (or resonator) which is composed of two reflecting mirrors that bounce these photons back and forth many times. With each reflection, photons pass back through the lasing medium, gaining more photons through stimulated emission in the process. As a result, the active lasing medium is sometimes called the gain medium. Since one of the reflectors is only partially reflective, some of this laser light will pass through to become an external laser beam. This process is visualized in \autoref{fig:laser_gain}.
+
+Lasers are best known for their ability to produce focused, high intensity light at a particular wavelength. Low powered lasers can be used as a laser pointer for a presentation, while high powered lasers can have enough energy to etch away materials. From both fundamental physics and industry perspectives, scientists are interested in increasing the intensity of lasers to explore various \gls{HEDS} phenomena. The most basic definition of intensity is
+
+\begin{equation}
+	\text{Intensity} = \frac{\text{Energy}}{\text{Area} \times \text{Time}}	
+\end{equation}
+So, for a given laser pulse, increasing the intensity would involve increasing the energy, decreasing the area (in terms of the surface that the laser beam hits), or decreasing the time. The energy can easily be increased by letting the laser stimulate emission of photons in the optical cavity with more passes. However, when the intensity in the cavity becomes too large, damage to the optical components (like the gain medium) can occur. In 1985, this problem was resolved by Donna Strickland and Gerard Mourou \cite{Strickland_1985_Optics} by first stretching an initial pulse in time before reaching the amplification stage. A sufficiently stretched out pulse can continue to gain energy while being sufficiently spread out (less intense) to not damage optical components. After amplification, the pulse is then compressed back into a short pulse. The clever use of gratings that separate light of different wavelengths allows pulses to easily be stretched and compressed in time. This method called \gls{CPA}, is visualized in \autoref{fig:cpa}.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.9\linewidth]{planning/images/cpa.PNG}
+	\caption{The stretch, amplification, and compression stages of chirped pulse amplification are depicted. Taken from \cite{Arrigoni_2019_Photonics}.}
+	\label{fig:cpa}
+\end{figure}
+The \gls{CPA} technology enabled lasers to produce high energy, extremely short femtosecond (a billionth of a millionth of a second) long pulses that drove intensities into the relativistic regime -- that is sufficiently high intensities that electrons can be accelerated close to the speed of light. The history of laser intensity since the production of the first laser in 1960 is depicted in \autoref{fig:laser_history}. The graph shows that between 1970-1985, laser intensities did not increase very much, but the invention of \gls{CPA} allowed intensities to increase 2-3 orders of magnitude every decade. The most modern lasers are so intense that they are capable of accelerating protons near the speed of light in the so-called ultra-relativistic regime. If the intensities of lasers continue to increase in the coming decades, physics at the most fundamental level could be explored by analyzing what is going on inside the nucleus of an atom. These intensities would provide insights into the fields of quantum electrodynamics and quantum chromodynamics. 
 
 \begin{figure}
 	\centering
@@ -16,19 +37,19 @@ Nd:YAG lasers work by pumping (flash lamp or diode laser) to make gain media to 
 	\label{fig:laser_history}
 \end{figure}
 
-\section{Laser-Driven Ion Acceleration}
-
-Explain what a laser stands for, stimulated emission, lasing medium, what the Ti:sapphire crystal does and why it is chosen, CPA
+In this work, the lasers mentioned employ a titanium sapphire gain medium which is produced by doping (adding impurity) titanium ions in a sapphire\footnote{Corundrums are a mineral composed of aluminum oxide ($\text{Al}_2\text{O}_3$) with trace amounts of impurities that replace a small fraction of the aluminum ions. Blue sapphires have trace amounts of titanium and iron, while rubies have trace amounts of chromium.} crystal. These typically output micron wavelength (infra-red) laser beams and are very commonly used in laser facilities across the globe.
 
 
 \section{Applications}
 
-This section highlights some of the most important applications of laser-based proton accelerators that motivates much the projects I have worked in during my PhD studies: (1) proton therapy for cancer treatment, (2) proton radiography for imaging, and (3) ion beam analysis for materials characterization.
+The lasers described in the preceding section are used to study materials at high energy density scales. These laser-matter interactions are important for a variety of reasons. First, lasers can heat up materials to be as hot and dense as the core of the sun (if only for a tiny fraction of a second) which can provide astrophysical insights. Second, these hot, dense conditions are needed for nuclear fusion which is an extremely promising future source of clean energy (explored at places like the \gls{NIF}). Finally, laser-matter interactions can produce high energy, pulsed beams of protons, electrons, and ions. The most well-studied proton acceleration mechanism is called \gls{TNSA} whose physical origins will be explored more in \autoref{sec:acceleration}. 
+
+During the course of my PhD, I have worked on ways to optimize the \gls{TNSA} mechanism for accelerating protons and this section highlights some its most important applications: (1) proton therapy for cancer treatment, (2) proton radiography for imaging, and (3) ion beam analysis for materials characterization.
 
 
 \subsection{Proton Therapy}
 
-Due to having no cure, cancer is one of the largest medical challenges faced worldwide and generally requires the use of harsh treatments like invasive surgery, chemotherapy, and immunotherapy. Another relevant treatment is called radiotherapy and more than half of all people with cancer will receive it as a part of their medical care \cite{Mayo_2024_Cancer}. Typically, a large machine will provide a source of x-rays (a type of energetic ionizing radiation) that kills the tumor. However, this radiation does not discern whether the cells are cancerous or not -- healthy tissue along the radiation beam path surrounding the tumor will also be damaged. This damage can be mitigated by shooting many beams from different angles such that they overlap at the site of the tumor. In this way, the dose delivered in the beam overlap region will be significantly higher than the surrounding tissue. This approach is typically employed by situating the machine on a rotating ``gantry''
+Finding a cure for cancer is one of the largest medical challenges faced worldwide and cancer generally requires the use of harsh treatments like invasive surgery, chemotherapy, and immunotherapy. Another relevant treatment is called radiotherapy and more than half of all people with cancer will receive it as a part of their medical care \cite{Mayo_2024_Cancer}. Typically, a large machine will provide a source of x-rays (a type of energetic ionizing radiation) that kills the tumor. However, this radiation does not discern whether the cells are cancerous or not -- healthy tissue along the radiation beam path surrounding the tumor will also be damaged. This damage can be mitigated by shooting many beams from different angles such that they overlap at the site of the tumor. In this way, the dose delivered in the beam overlap region will be significantly higher than the surrounding tissue. This approach is typically employed by situating the machine on a rotating ``gantry''
 
 As early as 1905, Bragg \cite{Bragg_1905_JOS} identified that charged particles have different properties than x-rays when passing through matter. Specifically, he identified that radium particles lost more energy (i.e. delivered a higher dose) at a lower speed. Physically, the slower the radium particles, the more time it has to interact with each of the individual atoms and the more energy it can deposit. This means that when the radium first enters a material at its highest speed, it is losing energy slowly. In contrast, when the radium is at a slow speed and about to stop, it is losing energy very quickly. In 1946, Wilson \cite{Wilson_1946_Rad} identified that this property of charged particles would enable a more concentrated dose to be delivered closer to the site of a tumor. In \autoref{fig:bragg_curve}, these differences are explicitly highlighted between x-rays and proton beams traveling through water. It can be seen that the proton beam is sharply peaked at a particular distance of around 23 centimeters, where the x-ray beam delivers a relatively higher dose at just a few centimeters. One can see the advantage of protons quite readily from this picture -- if a tumor is located 23 centimeters into the body, the protons, comparatively to the x-rays, will deliver more energy at the tumor site and less energy to the surrounding tissue. The shape of the proton beam curve in this graph is appropriately referred to as a ``Bragg Curve'' which peaks at the ``Bragg Peak''. 
 
@@ -75,13 +96,9 @@ As a proof of principle, Boivin \cite{Boivin_2022_NJoP} used TNSA beams from the
 
 As a final point, \gls{TNSA} beams can be accompanied by other radiation sources like electrons, x-rays, and neutrons. Different materials characterization process could, in principle, be used in conjunction with each other. While \gls{TNSA} beams are not the most common way to characterize materials today, they may emerge as an important tool for their ability to be pulsed at a high repetition rate and generated from a relatively compact system.
 
-\section{This Work}
-Talk about prior work 
+\section{Outline}
+In the last decade, machine learning has emerged as an increasingly important tool\footnote{This is especially clear from the past few years of generative AI with tools like Chat-GPT.} for understanding the vast volume of data present in this world. Scientists have already been using machine learning in other fields to make new discoveries, but the field of laser-driven proton acceleration has only started to make use of it. This is because machine learning requires an immense amount of data to provide a true benefit \cite{Dopp_2023_HPLSE} and most modern laser systems only produce around one pulse per second (or less). Before my time, our group produced \gls{TNSA} proton beams in 2018 \cite{Morrison_2018_NJoP} from a laser system that sends 1000 pulses a second. With this many pulses, collecting large amounts of data now becomes a reality. However, to realize applications, the \gls{TNSA} proton beams need to be optimized for specific use cases. 
 
-
-Talk about motivating question 
-
-
-Talk about how work is organized. 
+This work is a continuation of prior efforts in the group to computationally study \gls{TNSA} proton beams from Gregory Ngirmang, Joseph Smith, Nashad Rahman and others. In \autoref{ch:2} and \autoref{ch:3}, I give the physics and computational background needed to understand the main body of the dissertation. The bulk of my PhD work is summarized in \autoref{ch:5} which involved the construction of a synthetic proton acceleration dataset. This data was used as a testbed for assessing the feasibility of applying machine learning to possible future proton acceleration datasets. In \autoref{ch:4}, I detail the simulations I ran to corroborate the experimental findings of enhanced proton acceleration from the use of a split pulse. A future laser facility could possibility use the split pulse scheme as one of many optimizations to achieve a proton beam with desired properties. In \autoref{ch:6}, I detail my involvement in programming a machine learning feedback loop to automatically optimize accelerated electrons and protons from collected data. Finally, in \autoref{ch:7}, I conclude and give suggestions for future work.
 
 
