--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,26 @@
 	pages={1–50}
 }
 
+@article{Arrigoni_2019_Photonics,
+	author = {Arrigoni, Marco and Tapié, Jean-Luc},
+	title = {Chirped Pulse Amplification},
+	journal = {PhotonicsViews},
+	volume = {16},
+	number = {3},
+	pages = {78-82},
+	doi = {https://doi.org/10.1002/phvs.201900022},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/phvs.201900022},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/phvs.201900022},
+	year = {2019}
+}
+
+@misc{MeetOpticsPost, 
+	title={Laser fundamentals: operation and beam characteristics},
+	author={MeetOptics}, 
+	url = {https://www.meetoptics.com/academy/laser-fundamentals#how-do-lasers-work}, 
+	note = {Accessed: 2025-01-30}
+}
+
 @article{Yakovlev_2014_QE,
 	doi = {10.1070/QE2014v044n05ABEH015429},
 	url = {https://dx.doi.org/10.1070/QE2014v044n05ABEH015429},
